Fix bug 1154176 - malformed author link title in archive pages
Also fixed overflowing author avatar

--- a/themes/QMO6/style.css
+++ b/themes/QMO6/style.css
@@ -476,6 +476,9 @@ a:active {
 /*--------------------------------------------------------------------*
   @Author @Bio
 */
+.author-bio {
+  min-height: 70px;
+}
 .author-bio .widget-title {
   position: relative;
 }
